# lightdm

./: .travis.yml  Makefile.am  config.h.in  configure.ac  meson.build  meson_options.txt
common/: configuration.c  meson.build
data/: lightdm.conf  meson.build
help/: meson.build
liblightdm-gobject/: liblightdm-gobject-1.map  meson.build  session.c
liblightdm-qt/: meson.build
po/: lightdm.pot  meson.build
src/: Makefile.am  lightdm.c  meson.build  seat.c
tests/: Makefile.am  test-autologin-ignore-accounts-service
tests/scripts/: additional-config-priority.conf  additional-config.conf  additional-system-config-priority.conf  additional-system-config.conf  allow-tcp-xorg-1.16.conf  allow-tcp.conf  audit-autologin.conf  autologin-ignore-accounts-service.conf  autologin-in-background.conf  autologin-invalid-greeter.conf  autologin-invalid-session.conf  autologin-invalid-user.conf  autologin-logout.conf  autologin-pam-config.conf  autologin-pam.conf  autologin-password.conf  autologin-previous-session.conf  autologin-session-crash.conf  autologin-session-error.conf  autologin-session-timeout.conf  autologin-session.conf  autologin-timeout-in-background.conf  autologin-timeout-logout.conf  autologin-timeout.conf  autologin-xserver-crash.conf  autologin.conf  console-kit-no-xdg-runtime.conf  console-kit.conf  corrupt-xauthority.conf  crash-authenticate.conf  cred-error.conf  cred-expired.conf  cred-unavail.conf  denied.conf  expired.conf  group-membership.conf  home-dir-on-authenticate.conf  home-dir-on-session.conf  language-env.conf  lock-seat-after-vt-switch.conf  (+81 more)
tests/src/: test-runner.c
