# sbin
lightdm = executable ('lightdm',
                      [ 'accounts.c', 'accounts.h',
                        'console-kit.c', 'console-kit.h',
                        'display-manager.c', 'display-manager.h',
                        'display-manager-service.c', 'display-manager-service.h',
                        'display-server.c', 'display-server.h',
                        'greeter.c', 'greeter.h',
                        'greeter-session.c', 'greeter-session.h',
                        'greeter-socket.c', 'greeter-socket.h',
                        'guest-account.c', 'guest-account.h',
                        'lightdm.c',
                        'logger.c', 'logger.h',
                        'login1.c', 'login1.h',
                        'log-file.c', 'log-file.h',
                        'plymouth.c', 'plymouth.h',
                        'process.c', 'process.h',
                        'seat.c', 'seat.h',
                        'seat-local.c', 'seat-local.h',
                        'seat-unity.c', 'seat-unity.h',
                        'seat-xdmcp-session.c', 'seat-xdmcp-session.h',
                        'seat-xremote.c', 'seat-xremote.h',
                        'seat-xvnc.c', 'seat-xvnc.h',
                        'session.c', 'session.h',
                        'session-child.c', 'session-child.h',
                        'session-config.c', 'session-config.h',
                        'shared-data-manager.c', 'shared-data-manager.h',
                        'unity-system-compositor.c', 'unity-system-compositor.h',
                        'vnc-server.c', 'vnc-server.h',
                        'vt.c', 'vt.h',
                        'wayland-session.c', 'wayland-session.h',
                        'x-authority.c', 'x-authority.h',
                        'x-server-local.c', 'x-server-local.h',
                        'x-server-remote.c', 'x-server-remote.h',
                        'x-server-xmir.c', 'x-server-xmir.h',
                        'x-server-xvnc.c', 'x-server-xvnc.h',
                        'x-server.c', 'x-server.h',
                        'xdmcp-protocol.c', 'xdmcp-protocol.h',
                        'xdmcp-server.c', 'xdmcp-server.h',
                        'xdmcp-session.c', 'xdmcp-session.h',
                        'xdmcp-session-private.h' ],
                       dependencies: [ libcommon_dep, gcrypt_dep, glib_dep, gio_dep, gio_unix_dep, pam_dep, xdmcp_dep, xcb_dep ],
                       include_directories: [ config_inc ])

dm_tool = executable ('dm-tool',
                      ['dm-tool.c'],
                      dependencies: [ glib_dep, gio_dep ],
                      include_directories: [ config_inc ])

# libexec
guest_session = executable ('lightdm-guest-session',
                            ['lightdm-guest-session.c'])
